--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "replicate": "^0.9.2",
     "tinycolor2": "^1.6.0",
     "typescript": "5.0.3"
   }
