--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "replicate": "^0.9.2",
-    "tinycolor2": "^1.6.0",
     "typescript": "5.0.3"
   }
 }
